# Elite

./: .gitignore  CMakeLists.txt
!Elite_cpp/utils/: Makefile  session.cpp  session.cuh  session_exec
!Elite_cpp/utils/test/: 000000.pcd  000003.pcd  000004.pcd  downsampled_0.pcd  downsampled_method_0.pcd  poses.txt  updated_poses.txt
alignment/: map_zipper.py
dynamic_removal/: map_remover.py  tmp.py
dynamic_removal/dynamic_removal_cuda/: Makefile
dynamic_removal/map_remover_cuda/: Makefile  bindings.cpp  kernels.cu
map_update/: test.py
utils/: session.py  session_map.py
utils/utils_cuda/: Makefile  bindings.cpp  kernels.cu  test.py
utils/utils_cuda/test/: 000001.pcd  000002.pcd
